added configuration for number of days of conference

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     {
         "type" : "cookie",
         "cookieLifetime": 36000,
-        "cookieName":"meinKeks",
+        "cookieName":"conferencePlanner",
         "sessionLifetime":6000
     }
 }
